[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudomock"
version = "0.1.0"
description = "Official Python SDK for the SudoMock Mockup Generator API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SudoMock Labs", email = "hello@sudomock.com" },
]
keywords = ["mockup", "api", "sdk", "sudomock", "product-mockup", "psd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "tenacity>=9.0.0,<10.0.0",
]

[project.urls]
Homepage = "https://sudomock.com"
Documentation = "https://docs.sudomock.com"
Repository = "https://github.com/sudomock/sudomock-python"
Issues = "https://github.com/sudomock/sudomock-python/issues"
Changelog = "https://github.com/sudomock/sudomock-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "coverage>=7.6.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/sudomock"]

[tool.hatch.build.targets.wheel]
packages = ["src/sudomock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "SIM117",  # nested with -- parenthesized form requires Python 3.10+
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tenacity.*"
ignore_missing_imports = true
